# TWARDISv0.1

./: .gitignore  README.md  pyproject.toml
RIA_calcium_imaging/: 1_tiftojpg.py  2_crop_RIAregion.py  3_autoprompted_RIAsegmentation.py  4_extract_RIAbrightness_and_orientation.py  5_head_segmentation.py  6_extract_head_angle.py  prompt_data.json  run_ria_pipeline.py  validate_prompt_assets.py
multiworm_feature_extraction/: 1_convert_images.py  2_extract_wormcutouts.py  multiworm_feature_extraction.ipynb  run_multiworm_pipeline.py  worm_length.ipynb
notebooks/: RIA_calcium_imaging.ipynb  droplet_swimming.ipynb  multiworm_feature_extraction.ipynb  singleworm_tracking.ipynb
