[project]
name = "twardisv0-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "opencv-python>=4.13.0.92",
    "tifffile>=2026.2.24",
    "transformers>=4.57.1",
    "tqdm>=4.67.3",
    "gdown>=5.2.1",
    "torch>=2.10.0",
    "huggingface-hub>=1.7.1",
    "ipywidgets>=8.1.8",
    "numpy>=2.4.2",
    "pillow>=12.1.1",
    "scikit-image>=0.26.0",
    "scipy>=1.17.1",
    "torchvision>=0.25.0",
    "accelerate>=1.13.0",
    "safetensors>=0.7.0",
    "sam-2",
    "h5py>=3.16.0",
    "pandas>=3.0.1",
]

[tool.uv.sources]
sam-2 = { git = "https://github.com/facebookresearch/sam2.git" }
